CreateAccount screen complete

--- a/TheGame/Boards/Base.lproj/Main.storyboard
+++ b/TheGame/Boards/Base.lproj/Main.storyboard
@@ -799,7 +799,7 @@
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LWh-Bo-tsY"/>
-        <segue reference="QnG-6h-YAt"/>
+        <segue reference="hiE-kv-JFh"/>
+        <segue reference="Oej-iK-SRL"/>
     </inferredMetricsTieBreakers>
 </document>
